--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port= 8090
 #Connect to localhost sqlserver  
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=POS;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=1245
+spring.datasource.password=lamhuy1805
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2016Dialect
 spring.jpa.hibernate.ddl-auto=none
